# Numerical_Analysis

./: CMakeLists.txt  README.md  main.c
docs/: lagrange.md
include/: Gaussian.h  RK4.h  Trapezoidal.h  bisection.h  double_simpson.h  euler.h  hermite.h  integrator.h  lagrange.h  newton.h  newton_raphson.h  secant.h  simpson.h  successive_approximation.h  test_integrator.h  test_lagrange.h  test_newton.h
src/: Gaussian.c  RK4.c  Trapezoidal.c  bisection.c  double_simpson.c  euler.c  hermite.c  integrator.c  lagrange.c  newton.c  newton_raphson.c  secant.c  simpson.c  successive_approximation.c
tests/: test_RK4.c  test_bisection.c  test_doublesimpson.c  test_euler.c  test_gaussian.c  test_hermite.c  test_integrator.c  test_lagrange.c  test_newton.c  test_newtonraphson.c  test_secant.c  test_simpson.c  test_successiveapproximation.c  test_trapezoidal.c
